<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ActivityFolder.AuthorsActivity">

    <TextView
        android:id="@+id/authors_text_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:fontFamily="@font/google_sans_text"
        android:text="@string/Autors"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <TextView
        android:id="@+id/authors_text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/google_sans_text"
        android:text="@string/Sh"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/authors_text_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/google_sans_text"
        android:text="@string/S"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />


</androidx.constraintlayout.widget.ConstraintLayout>
